.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-ui-svc
spec:
  selector:
    app: dc-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
